--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenido a Hyperblog</title>
+    <title>Bienvenido a Hyperblog 3.0</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
             <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
-            <h1>probando cambios en git hub, revisando que paa con los cambios</h1>
+            <h1>Este es el titulo atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p><p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres..... por ahora.</p>
         </div>
     </div>
